tpl/app/less/stb/ui/footer.less
// component styles
//
// @author Fedotov <d.fedotov@infomir.com>
// @license GNU GENERAL PUBLIC LICENSE Version 3

.component.footer {
    width:unit(@width - 2 * @footerPadding, px);
    height:unit(@footerHeight, px);
    line-height:unit(@footerHeight, px);
    position:absolute;
    left:unit(@footerPadding, px);
    bottom:unit(@footerPaddingBottom, px);
    display:table;
    z-index:10;

    & > table {
        vertical-align:middle;
        text-align:center;

        & > tr > td {
            width:unit(@footerHeight, px);

            &.central {
                width:unit(@width - @footerPadding * 2 - @footerHeight * 2, px);

                & > .wrapper {
                    height:unit(@footerHeight, px);
                    visibility:inherit;
                    &.hidden { visibility:hidden; }

                    & > .button {
                        display:inline-block;
                        height:unit(@footerHeight, px);
                        padding:0 unit(@footerButtonsPadding, px);

                        &.hidden { display:none; }

                        .f1, .f2, .f3, .f4 {
                            width:unit(@footerHeight, px);
                            float:left;
                        }
                    }
                }
            }

            .icon {
                display:block;
                text-align:left;
                background:no-repeat center center;
            }

            .title {
                display:block;
                float:right;
            }
        }
    }
}

